# Sequential-Line-Search-for-Efficient-Photo-Parameters-Tweaking

./: .gitignore  README.md
alpha_version/: README.md
beta_version/src/: CMakeLists.txt  main.cpp
beta_version/src/GUI/: filter.cpp  guislidebar.h
beta_version/src/assemble/: core.cpp  core.h  main.cpp  regressor.cpp  regressor.h  regressor_hy.cpp
beta_version/src/public/iOS/ysgebl/geblgui.xcodeproj/: project.pbxproj
beta_version/src/public/src/fsgui3d/template-easy/: CMakeLists.txt
beta_version/src/public/src/fsguilib/src/: fsguicanvas.cpp  fsguipopupmenu.h
beta_version/src/public/src/opencv/: CMakeLists.txt
beta_version/src/public/src/opencv/videoCapture/: CMakeLists.txt
beta_version/src/public/src/ysbitmap/cmdtools/: CMakeLists.txt
beta_version/src/public/src/ysport/src/: ysspecialpath.cpp  ysspecialpath.h
beta_version/src/public/src/yssimplesound/sample_fssimplewindow/: main.cpp
beta_version/src/public/tests/batch_graphical/batch_graphical_test_template/: CMakeLists.txt
final_version/src/GUI/: CMakeLists.txt  filter.h
final_version/src/assemble/: CMakeLists.txt  core.cpp  core.h  nloptutility.cpp  preference.h  regressor_hy.cpp  regressor_hy.h  slider_hy.cpp  slider_hy.h  utility.cpp  utility.h
src/: CMakeLists.txt
src/GUI/: filter.cpp  filter.h  guislidebar.h  main.cpp
src/assemble/: CMakeLists.txt  framework.cpp  main.cpp
src/cmake/: FindEigen3.cmake
src/hanyu/: CMakeLists.txt  core.cpp  main.cpp  regressor_hy.cpp  regressor_hy.h  slider_hy.cpp  slider_hy.h
src/jiayi/: CMakeLists.txt  main.cpp
src/jiayi/fixed/: core.cpp  regressor_hy.cpp
src/jiayi/hanyu/: CMakeLists.txt  main.cpp  regressor_hy.cpp  utility.cpp
src/jiayi/math0/: CMakeLists.txt  math0.cpp  math0.h
src/jiayi/ver0/: ver0.sln
src/jiayi/ver0/Debug/: ver0.ilk
src/jiayi/ver0/ver0/: libnlopt-0.exp  libnlopt-0.lib  test.cpp  ver0.vcxproj  ver0.vcxproj.filters
src/jiayi/ver0/ver0/Debug/: vc140.idb
src/jiayi/ver0/ver0/Debug/ver0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  ver0.lastbuildstate
src/public/iOS/ysclass.xcodeproj/: project.pbxproj
src/public/iOS/ysglcpp.xcodeproj/: project.pbxproj
src/public/src/2DRetroMapTool/src/gui/: menusetup.cpp
src/public/src/fsgui3d/src/gl2/: CMakeLists.txt
src/public/src/fsgui3d/template/: fsgui3dapp.cpp
src/public/src/fsguilib/src/: fsguibase.cpp
src/public/src/fsguilib/src/nownd/: fsguinownd.cpp
src/public/src/fssimplewindow/samples/: CMakeLists.txt
src/public/src/fssimplewindow/template/: CMakeLists.txt
src/public/src/opencv/arucoMarkerDetection/: CMakeLists.txt
src/public/src/opencv/drawMarker/: CMakeLists.txt
src/public/src/ysclass/src/: ysadvgeometry.cpp  ysadvgeometry.h  ysstring.h
src/public/src/ysgebl/src/gui/: fsgui3dapp.cpp  fsgui3dapp_menusetup.cpp  textresource.h
src/public/src/ysgebl/src/kernelutil/: ysshellext_localop.cpp
src/public/src/ysgebl/src/main/: CMakeLists.txt
src/public/src/ysgebl/src/shellrender/: CMakeLists.txt  ysvisual.cpp
src/public/src/ysgl/src/glsl_src/: variColorBillBoard3DDrawingFragmentShader.glsl  variColorMarker3DDrawingFragmentShader.glsl  variColorMarker3DDrawingVertexShader.glsl
src/public/src/ysglcpp/src/: ysglbuffermanager.cpp  ysglbuffermanager.h
src/public/src/ystexturemanager/src/: ystexturemanager.h
src/public/tests/batch_graphical/fslazywindow/: CMakeLists.txt
src/utility/: CMakeLists.txt
src/yhh/: CMakeLists.txt  core.cpp  gaussianprocessregressor.cpp  gaussianprocessregressor.h  main.cpp  mathutility.cpp  mathutility.h  utility.cpp  utility.h
(+406 files in other folders)
